fix for display of mediaplayer container on iOS

--- a/src/stream-sdk/triton/MediaPlayer.scss
+++ b/src/stream-sdk/triton/MediaPlayer.scss
@@ -1,8 +1,23 @@
 .cmls-player-mediaplayer {
-	display: flex;
-	visibility: hidden;
-	align-items: center;
-	justify-content: center;
+	&,
+	& * {
+		&,
+		&::after,
+		&::before {
+			box-sizing: border-box;
+		}
+	}
+
+	&,
+	.outer-container,
+	.inner-container,
+	.player {
+		all: initial;
+		display: block;
+	}
+}
+
+.cmls-player-mediaplayer {
 	position: fixed;
 	z-index: 2147483647;
 	top: 0;
@@ -15,15 +30,63 @@
 	backdrop-filter: none;
 	transition: all 0.4s;
 
-	pointer-events: all;
+	pointer-events: none;
 
-	&,
-	& * {
-		&,
-		&::after,
+	.outer-container {
+		visibility: hidden;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 720px;
+		max-width: 95%;
+
 		&::before {
-			box-sizing: border-box;
+			content: "Your stream will begin after these messages…";
+			display: block;
+			position: relative;
+			z-index: 2;
+			color: #fffa;
+			font-family: sans-serif;
+			font-size: 12px;
+			line-height: 1.2;
+			text-align: center;
+			text-shadow: 1px 1px 1px #000a;
+			margin-bottom: 0.5em;
 		}
+	}
+
+	.inner-container {
+		visibility: hidden;
+		background-color: transparent;
+		box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding-bottom: 56.25%;
+		overflow: visible;
+		pointer-events: all;
+		transition: background-color 0.4s, box-shadow 0.3s;
+	}
+
+	.player {
+		background-color: rgba(0, 0, 0, 0);
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		transition: opacity 0.4s, background-color 0.4s;
+	}
+
+	video,
+	iframe {
+		border: 0;
+		width: 1px;
+		height: 1px;
+		min-width: 100%;
+		min-height: 100%;
 	}
 
 	&.show {
@@ -31,57 +94,18 @@
 		min-width: 100vw;
 		min-height: 100vh;
 		background-color: rgba(0, 0, 0, 0.75);
-		backdrop-filter: blur(2px);
+		backdrop-filter: blur(3px);
 
-		.container {
-			&::before {
-				content: "Your stream will begin after these messages…";
-				display: block;
-				position: relative;
-				z-index: 2;
-				color: #fffa;
-				font-family: sans-serif;
-				font-size: 12px;
-				text-align: center;
-				text-shadow: 1px 1px 1px #000a;
-				margin-bottom: 0.5em;
-			}
-
-			box-sizing: border-box;
-			position: fixed;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			width: 720px;
-			max-width: 95%;
+		.outer-container,
+		.inner-container {
+			visibility: visible;
 		}
-
+		.inner-container {
+			box-shadow: 0 0 100px rgba(0, 0, 0, 1);
+		}
 		.player {
-			background-color: #000;
+			background-color: rgba(0, 0, 0, 1);
+			opacity: 1;
 		}
-	}
-
-	.player {
-		display: block;
-		background-color: transparent;
-		box-shadow: 0 0 100px #000;
-		position: relative;
-		width: 100%;
-		height: 0;
-		padding-bottom: 56.25%;
-		overflow: visible;
-		pointer-events: all;
-		transition: background-color 0.5s;
-	}
-
-	iframe {
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 1px;
-		height: 1px;
-		min-width: 100%;
-		min-height: 100%;
 	}
 }
